maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:10: error: ')' expected but '}' found.
}
^Escaper:17: error: Unmatched closing brace '}' ignored here
}
^